--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="main.js"></script>
 </head>
 <body>
 
-<h2>this is mine again!!!</h2>
 
+<h1 id="title">Blackjack</h1>
+
+    <p id="text-area">Welcome to Blackjack</p>
+    <button id="new-game-button">New Game!</button>
+    <button id="hit-button">Hit</button>
+    <button id="stay-button">Stay</button>
+
+<script src="main.js"></script>
 </body>
 </html>
